// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accuracyPct": 8.225,
  "atk": 62,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 10.25,
  "critMult": 1.815,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 148,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 140,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 49,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 280,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accuracyPct": 1.775,
  "atk": 10,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.555,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 15,
  "healMult": 1.1500000000000001,
  "hp": 190,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accuracyPct": 4.685,
  "atk": 18,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.535,
  "critResistPct": 4.5,
  "def": 6,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 11,
  "healMult": 1.33,
  "hp": 640,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 37,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": true,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 22,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accuracyPct": 3.8249999999999997,
  "atk": 29,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 20.25,
  "critMult": 2.3749999999999996,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 60,
  "evasionPct": 16.8,
  "extraAttackChancePct": 56,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 23,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 112,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accuracyPct": 2.175,
  "atk": 28,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.595,
  "critResistPct": 1.5,
  "def": 30,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 5,
  "healMult": 1.7700000000000002,
  "hp": 835,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 835,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 10,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accuracyPct": 4.234999999999999,
  "atk": 51,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.801,
  "critResistPct": 1.5,
  "def": 18,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 0,
  "healMult": 1.31,
  "hp": 720,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 26,
  "magicDef": 7,
  "maxHp": 720,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 0,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "046bbab21c878960833465ca0388cecaa28c44a6",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 7,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "c48766b7d0d6014101ed6cf0c783b08f7ba8a0ea",
    "outcome": "win",
    "playerHp": 708,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "06fde7e80fb510c7d1353cf98367fe28065cf654",
    "outcome": "win",
    "playerHp": 568,
    "playerMp": 227,
    "turns": 36,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "847b471c11d210aafbe5d41dca4a6d05e78cf577",
    "outcome": "win",
    "playerHp": 635,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "69f3af341c1f3813caa429a535af6cb6d2ec6ed1",
    "outcome": "win",
    "playerHp": 436,
    "playerMp": 501,
    "turns": 55,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "177ba7f3f9c736875864569417a59feb7491e287",
    "outcome": "win",
    "playerHp": 711,
    "playerMp": 227,
    "turns": 99,
  },
  {
    "enemyHp": 0,
    "label": "heal_vs_들소_boss",
    "logSha": "b28c254d8d294b3ab76eb048d7cccdb5794f224b",
    "outcome": "win",
    "playerHp": 830,
    "playerMp": 227,
    "turns": 130,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "0a78dd0f85d015acaf69177b257de33ad917c374",
    "outcome": "win",
    "playerHp": 635,
    "playerMp": 501,
    "turns": 18,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "96348905b2491934948146a32fbdc7d8f6b92a79",
    "outcome": "win",
    "playerHp": 186,
    "playerMp": 92,
    "turns": 22,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "ca9c3797458c89a6d9c59fdb6526c7a99d7ab3cf",
    "outcome": "p1_win",
    "turns": 69,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "0e6a372434cfc8d96a61ed8de2b9167daf309f39",
    "outcome": "p1_win",
    "turns": 41,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "1a99777da13423403c1dad925fdd75231400925d",
    "outcome": "p2_win",
    "turns": 195,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "0a25d3d3ef103a2006f0b926df83b7bc0fb7de48",
    "outcome": "win",
    "playerHp": 711,
    "playerMp": 227,
    "turns": 20,
  },
  {
    "enemyHp": 0,
    "label": "chill_enemy",
    "logSha": "1cd9995eb3983d4ecab6d7bf6ef621f1125cfe14",
    "outcome": "win",
    "playerHp": 607,
    "playerMp": 227,
    "turns": 41,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "9402eb0daff4cbfae7a3515365523351fc716675",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 42,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "8b40b6c7d8deeaa4be39469b0fc718a313b89061",
    "outcome": "win",
    "playerHp": 551,
    "playerMp": 227,
    "turns": 50,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "8d89c8a97ba0b6264feaacba9631a122fbfaddfa",
    "outcome": "win",
    "playerHp": 704,
    "playerMp": 227,
    "turns": 21,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "9c00242fe0b1ce48ff8f2afacca621f8700b2b96",
    "outcome": "win",
    "playerHp": 702,
    "playerMp": 227,
    "turns": 28,
  },
  {
    "enemyHp": 0,
    "label": "heavyblow_enemy",
    "logSha": "c91af621cb05f07cf05d497c8e00060ea502160b",
    "outcome": "win",
    "playerHp": 685,
    "playerMp": 227,
    "turns": 93,
  },
]
`;
